Create automated tests for orderSummary

--- a/checkout.html
+++ b/checkout.html
@@ -27,7 +27,7 @@
       <div class="page-title">Review your order</div>
 
       <div class="checkout-grid">
-        <div class="order-summary js-order-summory"></div>
+        <div class="order-summary js-order-summary"></div>
 
         <div class="payment-summary js-payment-summary"></div>
       </div>
