--- a/jasmine-standalone-5.1.1/tests.html
+++ b/jasmine-standalone-5.1.1/tests.html
@@ -14,9 +14,11 @@
   <script src="lib/jasmine-5.1.1/boot1.js"></script>
   <script type="module" src="utils/moneyTest.js"></script>
   <script type="module" src="data/cartTest.js"></script>
+  <script type="module" src="checkout/orderSummaryTest.js"></script>
 
 </head>
 
 <body>
+  <div class="test-checkout"></div>
 </body>
 </html>
