--- a/amazon.html
+++ b/amazon.html
@@ -30,11 +30,10 @@
       </div>
 
       <div class="amazon-header-middle-section">
-        <input class="search-bar" type="text" placeholder="Search">
-
-        <button class="search-button">
-          <img class="search-icon" src="images/icons/search-icon.png">
-        </button>
+        <input class="search-bar js-search-bar" type="text" placeholder="Search">
+          <button class="search-button js-search-button">
+            <img class="search-icon" src="images/icons/search-icon.png">
+          </button>
       </div>
 
       <div class="amazon-header-right-section">
